# juliaDSP

./: .gitignore  README.md  dsp_source.jl
init/: object-mappings.txt
source/projects/dspnode~/: CMakeLists.txt  dspnode~.c
source/projects/julia~/: CMakeLists.txt  julia~.c
source/projects/simplemsp~/: CMakeLists.txt  simplemsp~.c
